# Xc-openarm

./: .gitignore  LICENSE.md  LICENSE_CN.md  README.md  README_CN.md  openarmx.repos  openarmx_minimal.repos  网线连接下ros通讯.md
openarmx/: package.xml
openarmx_bimanual_moveit_config/: package.xml
openarmx_bimanual_moveit_config/config/: joint_limits.yaml
openarmx_bimanual_moveit_config/launch/: demo.launch.py
openarmx_bringup/: package.xml
openarmx_bringup/config/v10_controllers/: openarmx_v10_bimanual_controllers.yaml  openarmx_v10_bimanual_controllers_namespaced.yaml
openarmx_bringup/launch/: camera_to_base.py  openarmx.bimanual.launch.py  pick_and_place.py
openarmx_commander/: package.xml
openarmx_commander/src/: moveit_commander.cpp
openarmx_gravity_comp/: README_CN.md  package.xml
openarmx_gravity_comp/src/: gravity_comp_node.cpp
openarmx_hardware/: openarmx_hardware.xml  package.xml
openarmx_hardware/include/openarmx_hardware/: v10_simple_hardware.hpp
openarmx_hardware/src/: v10_simple_hardware.cpp
openarmx_interfaces/: CMakeLists.txt
openarmx_interfaces/msg/: JointCommand.msg
openarmx_motor_manager/: GUI_MultiRobot.py  README.md  README_CN.md  __init__.py
openarmx_motor_manager/config/: __init__.py  config.yaml  config_manager.py  script_finder.py
openarmx_motor_manager/scripts/: check_motor_status.py  control_arms_grippers_action.py  control_motor_gohome.py  dis_all_can.py  dis_all_motors.py  en_all_can.py  en_all_motors.py  set_motor_zero.py  test_motor_all_random.py  test_motor_one_CSP.py  test_motor_one_CSP_hold.py  test_motor_one_MIT.py  test_motor_one_by_one.py  test_motor_one_hold_MIT.py
openarmx_motor_manager/ui/: ConfigDialog.py  MainUI_MultiRobot.py  RobotPage.py  RobotWorker.py  SettingsDialog.py  SingleMotorTestDialog.py  __init__.py
openarmx_motor_manager/ui/ui/: __init__.py
openarmx_motor_manager/utils/: __init__.py  can_detector.py
openarmx_preview_bringup/: README.md  package.xml
openarmx_ros2/: README.md  README_CN.md  moveit_api封装成commander节点的说明.md  openarmx.repos  openarmx_minimal.repos
openarmx_ros2/openarmx/: CMakeLists.txt  package.xml
openarmx_ros2/openarmx_bimanual_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  README_CN.md  package.xml  run_bimanual_moveit_sim.sh  run_bimanual_moveit_with_can2.0.sh
openarmx_ros2/openarmx_bimanual_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  openarm_bimanual.srdf  openarm_bimanual.urdf.xacro  ros2_controllers.yaml
openarmx_ros2/openarmx_bimanual_moveit_config/launch/: demo.launch.py  demo.launch.py.backup  demo_sim.launch.py  motor_config_loader.py  motor_control.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
openarmx_ros2/openarmx_bringup/: CMakeLists.txt  GRIPPER_CONTROL_GUIDE.md  GRIPPER_CONTROL_GUIDE_CN.md  README.md  README_CN.md  package.xml
openarmx_ros2/openarmx_bringup/launch/: camera_to_base.py  get_pose_jointstates.py  moveit_commander.launch.py  openarm.bimanual.launch.py
openarmx_ros2/openarmx_commander/: CMakeLists.txt
openarmx_ros2/openarmx_hardware/: CMakeLists.txt  README.md  README_CN.md  openarmx_hardware.xml  package.xml
openarmx_ros2/openarmx_hardware/src/: dynamics.cpp  v10_simple_hardware.cpp
openarmx_ros2/openarmx_interfaces/: package.xml
openarmx_ros2/openarmx_interfaces/msg/: PoseCommand.msg
openarmx_teleop_leader/: CMakeLists.txt  README.md  README_CN.md  package.xml
openarmx_teleop_leader/include/: dynamics.hpp
openarmx_teleop_leader/launch/: bimanual_teleop.launch.py  teleop_leader_with_gravitycomp_bimanual.launch.py
openarmx_teleop_leader/py/: teleop_unilateral_bimanual.py  teleop_unilateral_single.py
openarmx_teleop_leader/src/: dynamics.cpp  teleop_leader_node.cpp  teleop_leader_with_gravitycomp_single.cpp
openarmx_tools/openarmx_gripper_panel/: CMakeLists.txt  README.md  README_CN.md  package.xml
openarmx_tools/openarmx_gripper_panel/include/openarmx_gripper_panel/: gripper_panel.hpp
openarmx_tools/openarmx_gripper_panel/plugins/: plugin_description.xml
openarmx_tools/openarmx_gripper_panel/src/: gripper_panel.cpp
openarmx_tools/openarmx_kp_kd_panel/: CMakeLists.txt  LICENSE  README.md  README_CN.md  package.xml  plugin_description.xml
openarmx_tools/openarmx_kp_kd_panel/include/openarmx_kp_kd_panel/: kp_kd_panel.hpp
openarmx_tools/openarmx_kp_kd_panel/src/: kp_kd_panel.cpp
openarmx_tools/openarmx_teach/: README.md  README_CN.md  package.xml  setup.py  录制轨迹-压缩-回放-说明.md
openarmx_tools/openarmx_teach/openarmx_teach/: compress_trajectory.py  play_joint_trajectory.py  record_joint_states_always.py
openarmx_tools/openarmx_teach/trajectories/: .gitignore
使用说明书/: 00_README.md  00_封面_新.md  PDF整理指南.md  目录.md
使用说明书/00_安全声明/: 01_安全警告.md  02_操作规范.md  03_紧急处理.md  04_责任声明.md
使用说明书/01_系统概述/: 01_产品介绍.md  02_系统架构.md  03_电机配置说明.md
使用说明书/02_环境准备/: 01_硬件要求.md  02_系统依赖安装.md  03_工作空间构建.md
使用说明书/03_硬件连接与配置/: 01_CAN总线连接.md  02_CAN接口配置.md  03_电机ID配置.md  04_硬件故障排查.md
使用说明书/04_电机测试与调试/: 01_CAN总线管理.md  02_电机使能与初始化.md  03_电机状态监控.md  04_单电机测试.md  05_多电机测试.md  06_回零操作.md
使用说明书/05_MoveIt运动规划/: 01_启动MoveIt.md  02_RViz界面操作.md  03_单臂运动规划.md  04_双臂独立控制.md
使用说明书/06_轨迹录制与回放/: 01_连续录制.md  02_轨迹回放.md  03_轨迹文件格式.md
使用说明书/07_控制器配置/: 01_控制器类型.md  02_参数调优.md  03_控制模式说明.md  04_控制器管理.md
使用说明书/08_高级应用/: 01_力控与柔顺控制.md  02_性能优化.md
使用说明书/09_故障排查/: 01_CAN通信问题.md  02_电机异常处理.md  03_控制器问题.md  04_常用诊断命令.md
使用说明书/10_开发者指南/: 01_包结构说明.md  02_扩展开发.md  03_API参考.md  04_贡献指南.md
使用说明书/11_附录/: 01_参数速查表.md  02_常用命令速查.md  03_术语表.md  04_参考资料.md
使用说明书/temp_clean_numbers/: 01_目录.md  pandoc_log.txt  生成PDF_修复版.sh  生成PDF_完美封面版.sh  生成PDF_带编号版.sh  生成PDF_无横线版.sh  生成PDF_最终修复版.sh  生成PDF_最终版.sh  生成PDF_终极优化版.sh  生成PDF_终极完美版.sh  生成PDF_表格修复版.sh  生成PDF_表格完美版.sh
使用说明书/temp_clean_numbers/00_安全声明/: 01_安全警告.md  02_操作规范.md  03_紧急处理.md  04_责任声明.md
使用说明书/temp_clean_numbers/01_系统概述/: 01_产品介绍.md  02_系统架构.md  03_电机配置说明.md
使用说明书/temp_clean_numbers/02_环境准备/: 01_硬件要求.md  02_系统依赖安装.md  03_工作空间构建.md
(+38 files in other folders)
