<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
   Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International

   Copyright (c) 2026 Chengdu Changshu Robot Co., Ltd.
   https://www.openarmx.com

   This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike
   4.0 International License (CC BY-NC-SA 4.0).

   To view a copy of this license, visit:
   http://creativecommons.org/licenses/by-nc-sa/4.0/

   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
-->
<package format="3">
  <name>openarmx_bringup</name>
  <version>1.0.0</version>
  <description>Bringup script for OpenArmX</description>
  <maintainer email="openarmrobot@gmail.com">Chengdu Changshu Robot Co., Ltd</maintainer>
  <license>CC-BY-NC-SA-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
