<?xml version="1.0"?>
<package format="3">
  <name>openarmx_kp_kd_panel</name>
  <version>0.1.0</version>
  <description>RViz2面板：动态调整机器人关节KP/KD参数（刚度和阻尼）。支持8个关节的参数实时调整。</description>
  <maintainer email="openarmrobot@gmail.com">OpenArmX</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="share/openarmx_kp_kd_panel/plugin_description.xml"/>
  </export>
</package>
